--- a/ATV5.1/Makefile
+++ b/ATV5.1/Makefile
@@ -20,5 +20,11 @@ Estabelecimento.o: src/Estabelecimento.cpp include/Estabelecimento.h
 Cliente.o: src/Cliente.cpp include/Cliente.h
 	$(GCC) $(GCC_FLAGS) -c src/Cliente.cpp
 
+Fornecedor.o: src/Fornecedor.cpp include/Fornecedor.h
+	$(GCC) $(GCC_FLAGS) -c src/Fornecedor.cpp
+
+VectorSupermercado.o: src/VectorSupermercado.cpp include/VectorSupermercado.h
+	$(GCC) $(GCC_FLAGS) -c src/VectorSupermercado.cpp
+
 clean:
 	rm *.o $(PROGRAMA)
