--- a/ATV5.1/Makefile
+++ b/ATV5.1/Makefile
@@ -5,7 +5,7 @@ WARNINGS = -Wall -Wextra -pedantic -Wshadow -Wformat=2 -Wno-unused-result      \
 	-Wduplicated-cond -Wcast-qual -Wcast-align
 PROGRAMA = supermercado
 
-$(PROGRAMA): main.o  App.o Estabelecimento.o Cliente.o
+$(PROGRAMA): main.o  App.o Estabelecimento.o Cliente.o Fornecedor.o VectorSupermercado.o
 	$(GCC) $(GCC_FLAGS) -o supermercado *.o
 
 main.o: src/main.cpp
@@ -19,6 +19,12 @@ Estabelecimento.o: src/Estabelecimento.cpp include/Estabelecimento.h
 
 Cliente.o: src/Cliente.cpp include/Cliente.h
 	$(GCC) $(GCC_FLAGS) -c src/Cliente.cpp
+
+Fornecedor.o: src/Fornecedor.cpp include/Fornecedor.h
+	$(GCC) $(GCC_FLAGS) -c src/Fornecedor.cpp
+
+VectorSupermercado.o: src/VectorSupermercado.cpp include/VectorSupermercado.h
+	$(GCC) $(GCC_FLAGS) -c src/VectorSupermercado.cpp
 
 clean:
 	rm *.o $(PROGRAMA)
