criando classes supermercado e restaurante

--- a/ATV6/Makefile
+++ b/ATV6/Makefile
@@ -4,11 +4,11 @@ PROGRAMA = supermercado
 
 ALUNOS = ArturMeloSantiagoFerreira_LucasAgnezLima
 
-$(PROGRAMA): main.o  App.o Estabelecimento.o Cliente.o VectorSupermercado.o Fornecedor.o
+$(PROGRAMA): main.o  App.o Estabelecimento.o Cliente.o VectorSupermercado.o Fornecedor.o Supermercado.o Restaurante.o
 	$(GCC) $(GCC_FLAGS) -o supermercado *.o
 
 zip: src/* include/* 
-	zip $(ALUNOS).zip src/* include/* Makefile README.md .gitignore estoque.csv fornecedor.csv
+	zip $(ALUNOS).zip src/* include/* Makefile README.md .gitignore estoque.csv fornecedor.csv menu.csv
 
 main.o: src/main.cpp
 	$(GCC) $(GCC_FLAGS) -c src/main.cpp
@@ -28,5 +28,11 @@ Fornecedor.o: src/Fornecedor.cpp include/Fornecedor.h
 VectorSupermercado.o: src/VectorSupermercado.cpp include/VectorSupermercado.h
 	$(GCC) $(GCC_FLAGS) -c src/VectorSupermercado.cpp
 
+Supermercado.o: src/Supermercado.cpp include/Supermercado.h
+	$(GCC) $(GCC_FLAGS) -c src/Supermercado.cpp
+
+Restaurante.o: src/Restaurante.cpp include/Restaurante.h
+	$(GCC) $(GCC_FLAGS) -c src/Restaurante.cpp
+	
 clean:
 	rm *.o $(PROGRAMA)
