--- a/ATV6/Makefile
+++ b/ATV6/Makefile
@@ -4,7 +4,7 @@ PROGRAMA = supermercado
 
 ALUNOS = ArturMeloSantiagoFerreira_LucasAgnezLima
 
-$(PROGRAMA): main.o  App.o Estabelecimento.o Cliente.o VectorSupermercado.o Fornecedor.o Supermercado.o Restaurante.o
+$(PROGRAMA): main.o  Util.o Estabelecimento.o Cliente.o VectorSupermercado.o Fornecedor.o Supermercado.o Restaurante.o
 	$(GCC) $(GCC_FLAGS) -o supermercado *.o
 
 zip: src/* include/* 
@@ -13,7 +13,7 @@ zip: src/* include/*
 main.o: src/main.cpp
 	$(GCC) $(GCC_FLAGS) -c src/main.cpp
 
-App.o: src/Util.cpp include/Util.h
+Util.o: src/Util.cpp include/Util.h
 	$(GCC) $(GCC_FLAGS) -c src/Util.cpp
 
 Estabelecimento.o: src/Estabelecimento.cpp include/Estabelecimento.h
